--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -7,9 +7,9 @@
             <input id="fldName" type="text" class="form-control" placeholder="City Name" name="fldName" value="{{city.fldName}}">
         </div>
         <div class="col">
-            <label for="fldAbbreviation">City Abbreviation</label>
-            <input id="fldAbbreviation" type="text" class="form-control" placeholder="City Abbreviation"
-                   name="fldAbbreviation" value="{{city.fldAbbreviation}}">
+            <label for="fldAbreviation">City Abreviation</label>
+            <input id="fldAbreviation" type="text" class="form-control" placeholder="City Abreviation"
+                   name="fldAbreviation" value="{{city.fldAbreviation}}">
         </div>
         <div class="col">
             <label for="fldCountry">City Country</label>
