--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -7,9 +7,9 @@
             <input id="fldName" type="text" class="form-control" placeholder="City Name" name="fldName">
         </div>
         <div class="col">
-            <label for="fldAbbreviation">City Abbreviation</label>
-            <input id="fldAbbreviation" t ype="text" class="form-control" placeholder="City Abbreviation"
-                   name="fldAbbreviation">
+            <label for="fldAbreviation">City Abreviation</label>
+            <input id="fldAbreviation" t ype="text" class="form-control" placeholder="City Abreviation"
+                   name="fldAbreviation">
         </div>
         <div class="col">
             <label for="fldCountry">City Country</label>
