--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="card" class="m-5 p-2">
-    <h5 class="card-title">{{ city.fldName }} - {{ city.fldAbbreviation }}</h5>
+    <h5 class="card-title">{{ city.fldName }} - {{ city.fldAbreviation }}</h5>
 
     <ul class="list-group list-group-flush">
         <li class="list-group-item">Latitude: {{ city.fldLat }}</li>
