--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
         <th scope="col">Latitude</th>
         <th scope="col">Longitude</th>
         <th scope="col">Country</th>
-        <th scope="col">Abbreviation</th>
+        <th scope="col">Abreviation</th>
         <th scope="col">Capital Status</th>
         <th scope="col">Population</th>
     </tr>
@@ -19,7 +19,7 @@
         <td>{{ city.fldLat }}</td>
         <td>{{ city.fldLong }}</td>
         <td>{{ city.fldCountry }}</td>
-        <td>{{ city.fldAbbreviation }}</td>
+        <td>{{ city.fldAbreviation }}</td>
         <td>{{ city.fldCapitalStatus }}</td>
         <td>{{ city.fldPopulation }}</td>
     </tr>
